@@ -1,0 +1,4 @@
+DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
+EBUILD selinux-ftp-2.20110726.ebuild 329 RMD160 ec2db5a817ec7162cbe0346357f4d9d800d96a18 SHA1 24f6f74c6a3edb417fb5df91119a81c33a4b438d SHA256 fa192eec4e58ea8b7c29fc0cf8cdc7b85a2522593faf4163ae36c71bcea0e5dd
+MISC ChangeLog 296 RMD160 00130c2f81c4c667fc3da62cf95724464579aeb7 SHA1 b1b8d97d8392082c97d74a775c45b469c21620bb SHA256 f23fbd163471dd6153151dffbbfd5482297a6a1e71a78d85adab8161c259e5f6
+MISC metadata.xml 227 RMD160 234224fd87c3c9a4f39d8c6ce3f596e96956ad00 SHA1 b73911482c50d3e3282f674cea9331c7531fde62 SHA256 002e4f7e181704fd4b4a75b5eb29510c2c8d4da96e3216b7c188a7a5ae27845e
