@@ -1,4 +1,3 @@
-DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-ftpd-2.20110726.ebuild 239 RMD160 d6235907ae66a50d06ea65a4a25f6fc9c968bb24 SHA1 5dd0deee2215f88371ae56f582f2b7a957e4b90b SHA256 6ebc167d822bc34e91862e283d8e10cec6f92370f7ca5dfdf81102b45b5e8ff1
-MISC ChangeLog 3708 RMD160 4112fee20823024e3dd59d7875d72f572e7127ed SHA1 808b7910e9e94696ce43f369620425610eb5533b SHA256 5b0d49cb92e3efe8df1d2911a0641a3181fb129dc0b44edc5fa8a697dd70786a
+EBUILD selinux-ftpd-2.20110726.ebuild 347 RMD160 e463ccc426e9074f47071f0f1988309e5d8e7526 SHA1 fbe70f54d22d294e96018825931793cdbb7f20da SHA256 dd258fbd5471ea6b04a91909f76d78e1a6fe8e6dc379958e4a7c1d3709c60a9c
+MISC ChangeLog 3837 RMD160 aae81a2c44f7f397f21cd0bc30bee60b5e74a8dc SHA1 33a4b9908c6bec0481ff86b5630ac363f9d5d728 SHA256 418f1fcce24ce2e1b9cd00373a856014b5824b4be62ae57990fe47ca4db1238d
 MISC metadata.xml 228 RMD160 f44f5e1f941ba9b793fa27b5f2d74348b0813160 SHA1 f6a38b0ad0f115b611f248e0e465545a52c3cd00 SHA256 b515ffec291fcdc3f7327769485b75ca8a7fd4340fcfabc3e9dbbd03ba178125
