@@ -3,11 +3,11 @@
 # $Header: $
 EAPI="4"
 
+DEPEND=">=sec-policy/selinux-ftp-2.20110726"
+
 IUSE=""
-MODS="ftpd"
-
-inherit selinux-policy-2
-
-DESCRIPTION="SELinux policy for ftpd"
-
+DESCRIPTION="SELinux policy for FTPd (meta-package for ftp)"
+HOMEPAGE="http://hardened.gentoo.org/selinux"
 KEYWORDS="~amd64 ~x86"
+SLOT="0"
+LICENSE="public-domain"
