@@ -1,0 +1,10 @@
+# ChangeLog for sec-policy/selinux-ftp
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*selinux-apm-2.20110726 (13 Aug 2011)
+
+  13 Aug 2011; <swift@gentoo.org> +selinux-apm-2.20110726.ebuild,
+  +metadata.xml:
+  Introduce SELinux policy module package for ftp
+
