@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-ftpd/ChangeLog,v 1.24 2011/06/04 16:43:58 blueness Exp $
 
+  13 Aug 2011; <swift@gentoo.org> selinux-ftpd-2.20110726.ebuild:
+  Make ftpd a meta-package as there is no SELinux ftpd module
+
   04 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
   -selinux-ftpd-2.20090730.ebuild, -selinux-ftpd-2.20091215.ebuild,
   -selinux-ftpd-20080525.ebuild:
